[gd_scene load_steps=11 format=2]

[ext_resource path="res://modules/ui/Dialog.gd" type="Script" id=1]
[ext_resource path="res://game/assets/font/lightout.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/assets/sounds/new_ui/UI_Texte.ogg" type="AudioStream" id=3]
[ext_resource path="res://game/assets/sounds/Random_voice-002.ogg" type="AudioStream" id=4]
[ext_resource path="res://game/assets/sounds/Random_voice-001.ogg" type="AudioStream" id=5]
[ext_resource path="res://game/assets/sounds/Random_voice-006.ogg" type="AudioStream" id=6]
[ext_resource path="res://game/assets/sounds/Random_voice-003.ogg" type="AudioStream" id=7]
[ext_resource path="res://game/assets/sounds/Random_voice-004.ogg" type="AudioStream" id=8]
[ext_resource path="res://game/assets/sounds/Random_voice-005.ogg" type="AudioStream" id=9]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[node name="Dialogue" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 55.9894, -42.316 )
polygon = PoolVector2Array( -798.574, -78.8422, -540.95, -81.5119, -164.751, -79.7557, -150.609, -55.7141, -108.815, -30.1827, -150.087, -33.3575, -167.195, 31.9495, -492.896, 35.954, -782.556, 30.6147, -807.918, -25.4486 )

[node name="Timer" type="Timer" parent="Polygon2D"]
wait_time = 0.02
autostart = true

[node name="Text" type="Label" parent="."]
margin_left = -713.0
margin_top = -106.0
margin_right = -128.0
margin_bottom = -21.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -753.0
margin_top = -124.0
margin_right = 18.0
margin_bottom = -11.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0

[node name="TimerVoice" type="Timer" parent="."]
wait_time = 4.0

[node name="Voice0" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 3.0

[node name="Voice1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 3.0

[node name="Voice2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 3.0

[node name="Voice3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 3.0

[node name="Voice4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 3.0

[node name="Voice5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 3.0

[node name="TimerQueue" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="timeout" from="Polygon2D/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="TimerVoice" to="." method="_on_TimerVoice_timeout"]
[connection signal="timeout" from="TimerQueue" to="." method="_on_TimerQueue_timeout"]
